# college_inflation_research

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: sources.md
data/raw/: cpi_annual.csv  tuition_costs.csv
scripts/: 01_validate_data.py  02_analyze.py  03_project.py  04_charts.py  05_generate_report.py  config.py  utils.py
